Fix layout issue where header and body text alignment was off

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -22,6 +22,14 @@
       margin-bottom: 0.5em;
     }
 
+    & .nhsuk-grid-column-two-thirds {
+      padding: 0;
+
+      @include mq($from: tablet) {
+        padding: 0 16px;
+      }
+    }
+
     .category-pages-nav {
       .current_page {
         font-weight: bold;
@@ -102,4 +110,9 @@
       margin: 0;
     }
   }
+}
+
+.nhsuk-grid-row {
+  margin-left: 0;
+  margin-right: 0;
 }
